<resources>
    <string name="app_name">SaveEat</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_your_email_and_password">Enter your phone number and password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="set_password">Set Password</string>
    <string name="forgot_password">Forget Password</string>
    <string name="enter_your_email_and_phone_number">Enter your phone number</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="set_a_password">Set a password</string>
    <string name="search_city">Search for city or location</string>
    <string name="map_api">AIzaSyCJj8cpjmnNmRVOwwUG2pXw201bN5Mgy0s</string>
    <string name="use_my_current_location">Use my current location</string>
    <string name="choose_this_location">Choose this location</string>
    <string name="save_changes">Save Changes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dishes_restaurant">Search for dishes or restaurants</string>
    <string name="show_restaurants_in_this_area">Show restaurants in this area</string>
    <string name="search">Search</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="getting_address">Getting Address..!</string>
    <string name="sorry_dont_serve_here">Sorry we didn\'t serve here yet...</string>
    <string name="turn_on_gps">Please turn on GPS First</string>
    <string name="retry">Retry</string>
    <string name="try_again_later">Please try again later</string>
    <string name="forgot_password_login">Forgot Password?</string>
    <string name="email_phone_no">Email/Phone No</string>
    <string name="enter_your_code">Enter Your Code</string>
    <string name="enter_the_code_we_just_send">Enter the code we just sent</string>
    <string name="resend_code">Resend code</string>
    <string name="reset_password">Reset Password</string>
    <string name="save">Save</string>
    <string name="change">Change</string>
    <string name="enter_new_password">Enter a new Password</string>
    <string name="password_has_been_reset">Your password has been reset</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_eat_credit_description">SaveEat Credits are used for purchasing food in the app. If you have a campaign code you can press the button above and type it in to get more credits</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="add_credits">Add Credits</string>
    <string name="upcoming">Upcoming</string>
    <string name="history">History</string>
    <string name="unlock_location">Unlock Location</string>
    <string name="you_have_found_restaurant_that_not_open">If you\'ve found a restaurant that\'s not open to the public, you can use their SaveEat code here to unlock the location in the app</string>
    <string name="type_the_code_here">Type the code here</string>
    <string name="rewards">Rewards</string>
    <string name="with_saveeat_rewards_purchases_prizes_so_when_you_do_your_bit_for_the_planet_you_ll_be_rewarded">With SaveEat Rewards, purchases = prizes. So when you do your bit for the planet, you\'ll be rewarded</string>
    <string name="make_5_orders_kr_50_or_higher_n_and_you_can_select_a_prize">Make 5 orders (₹500 or higher) in 30 days and you can select a prize.</string>
    <string name="plant_a_tree">Plant a tree</string>
    <string name="in_partnership_with_one_tree_planted_we_ll_plant_a_tree_for_you_at_the_tap_of_a_button">Plant a tree, in partnership with One Tree Planted, we\'ll plant a tree for you at the tap of a button.</string>
    <string name="_25_off_your_next_order">Receive ₹25 in Credits</string>
    <string name="get_an_additional_discount_on_top_of_your_next_order_up_to_200_kr">You can use your credits to rescue food items.</string>
    <string name="receive_25_kr_credit">Receive 25 kr credit</string>
    <string name="you_can_use_your_credits_to_rescue_items">You can use your credits to rescue items</string>
    <string name="how_it_works">How it works</string>
    <string name="every_order_of_kr_50_or_higher_will_automatically_mark_as_1_order_towards_your_reward">Every order of ₹500 or higher hill automatically mark as 1 order towards your reward</string>
    <string name="once_your_first_order_is_made_you_get_30_days_to_make_the_rest_of_the_5_orders_kr_50_or_higher">Once your first order is made, you get 30 days to make the rest of the orders (₹500 or higher)</string>
    <string name="once_you_ve_made_5_purchases_you_can_select_one_of_our_well_deserved_rewards">Once you\'ve made 5 purchases, you can select on of our well deserved rewards.</string>
    <string name="faq">FAQ</string>
    <string name="items_rescued">Items Rescued</string>
    <string name="saved">Saved</string>
    <string name="food_rescued">Food Rescued</string>
    <string name="payment_information">Payment Information</string>
    <string name="credit_wallet">Credit Wallet</string>
    <string name="hidden_location">Hidden Location</string>
    <string name="order_details_amp_history">Order Details &amp; History</string>
    <string name="help_amp_support">Help &amp; Support</string>
    <string name="log_out">Log Out</string>
    <string name="saveeat_badges">SaveEat Badges</string>
    <string name="choose_a_location_to_see_nwhat_s_available">Choose a location to see  <br></br>what\'s available</string>
    <string name="please_select_distance">Please select Distance</string>
    <string name="within_3KM">Within 3 KMS</string>
    <string name="within_5KM">Within 5 KMS</string>
    <string name="within_10KM">Within 10 KMS</string>
    <string name="within_15KM">Within 15 KMS</string>
    <string name="this_restaurant_follows_super_safety_standards">This restaurant follows Super Safety Standards</string>
    <string name="veg">Veg</string>
    <string name="add_extras">Add extras</string>
    <string name="checkout">Checkout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="please_allow_permission_to_access_camera">Please allow permission to access your camera</string>
    <string name="add_requirement">Add Instructions</string>
    <string name="total">TOTAL</string>
    <string name="rate_order">Rate Order</string>
    <string name="order_being_prepared">Order has been accepted</string>
    <string name="order_pending">Order is pending</string>
    <string name="order_ready_to_pickup">Your order is ready to pick up</string>
    <string name="order_completed">Order completed</string>
    <string name="send">Send</string>
    <string name="campaign_code_to_add_credit">Type a campaign code to add credits to your account. Note that some codes do not work more than once and some have special conditions to them.</string>
    <string name="done">Done</string>
    <string name="add_any_requirements_here">Add any requirements here</string>
    <string name="awesome">Awesome</string>
    <string name="cart">Cart</string>
    <string name="pick_up_now">Pick up now</string>
    <string name="pick_up_later">Pick up later</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax_amp_fees"><![CDATA[Tax & Fees]]></string>
    <string name="restaurant_packaging">Restaurant Packaging</string>
    <string name="restaurant_gst">Restaurant GST</string>
    <string name="saveeat_fees">SaveEat Fees</string>
    <string name="favourites">Favourites</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="search_for_restaurant_name">Search for restaurant name</string>
    <string name="credits">Credits</string>
    <string name="unlock_hidden_location">Unlock a hidden location</string>
    <string name="select_payment">Select Payment</string>
    <string name="payment">Payment</string>
    <string name="enter_password">Please enter password</string>

    <string name="enter_password_character">Password field must be contains min 6 characters with special character &amp; numeric digits</string>
    <string name="re_enter_password">Please enter confirm password</string>
    <string name="enter_confirm_password_character">Confirm password field must be contains min 6 characters with special character &amp; numeric digits</string>
    <string name="password_does_not_math">Re- enter password does not match</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="please_enter_valid_phone_number">Please enter valid phone number</string>
    <string name="please_enter_full_name">Please enter full name</string>
    <string name="please_enter_emailId">Please enter email id</string>
    <string name="valid_email_id">Please enter valid email id</string>
    <string name="save_its_before_it_too_late">Save it before it\'s too late</string>
    <string name="popular_around_you">Popular Around Your</string>
    <string name="new_restaurant_on_saveeat">New restaurants on SaveEat</string>
    <string name="all_restaurant_near_you">All restaurants near you</string>
    <string name="price">₹ %1$s</string>
    <string name="full_name_validation">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
    <string name="update_cart">Update Cart</string>
    <string name="review_rating">Review</string>
    <string name="clear_choices"><font size="40"><b>Are you sure wish to close?</b></font>\nGoing back will clear all of your selected item choices</string>
    <string name="continues">Continue</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="help"><u>Help</u></string>
    <string name="oops_there_seem_to_be_no_restaurants_n_available_in_your_area">Oops! There seem to be no restaurants \n available in your area</string>
    <string name="title_activity_global_search">GlobalSearchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="filter_result">Filter Result</string>
    <string name="redeem">Redeem</string>


</resources>