<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="model"
            type="com.saveeat.model.response.saveeat.order.OrderBean" />

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/clTaxInfo"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_7sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/ivCLose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:padding="@dimen/_7sdp"
                android:src="@drawable/i_remove"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView39"
                style="@style/inter_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tax_amp_fees"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView40"
                style="@style/inter_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/restaurant_packaging"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintEnd_toStartOf="@+id/textView42"
                app:layout_constraintStart_toStartOf="@+id/textView39"
                app:layout_constraintTop_toBottomOf="@+id/textView39" />


            <TextView
                android:id="@+id/textView42"
                style="@style/inter_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="₹0"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView40"
                app:layout_constraintEnd_toStartOf="@+id/ivCLose" />

            <TextView
                android:id="@+id/textView44"
                style="@style/inter_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="₹0"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView41"
                app:layout_constraintEnd_toEndOf="@+id/textView42" />

            <TextView
                android:id="@+id/textView41"
                style="@style/inter_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/restaurant_gst"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintStart_toStartOf="@+id/textView40"
                app:layout_constraintTop_toBottomOf="@+id/textView40" />


            <TextView
                android:id="@+id/tvSaveEatFees"
                style="@style/inter_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/price(``+Math.round(model.tax))}"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView45"
                app:layout_constraintEnd_toEndOf="@+id/textView42" />

            <TextView
                android:id="@+id/textView45"
                style="@style/inter_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/saveeat_fees"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView40"
                app:layout_constraintTop_toBottomOf="@+id/textView41" />





        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</layout>

