<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.saveeat.utils.extn.DoubleExtensionKt"/>

        <variable
            name="model"
            type="com.saveeat.model.response.saveeat.badge.BadgeBean" />
    </data>

    <LinearLayout
        android:id="@+id/clDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/light_orange"
        tools:context=".ui.activity.drawer.drawer.DrawerActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivRewards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:src="@drawable/group_4005"/>


            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"/>



            <TextView
                android:id="@+id/tvBadge"
                style="@style/poppin_semi_bold"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"

                android:text="@string/saveeat_badges"
                android:drawablePadding="@dimen/dimen_10sp"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />
        </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRewards"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:nestedScrollingEnabled="false" />

        <ProgressBar
            android:id="@+id/progresBar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:elevation="5dp"
            android:layout_centerInParent="true"
            />
        </RelativeLayout>




        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/drawable_top_round_corner"
            android:backgroundTint="#ffd894">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="21sp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/tvItemRescued"
                            style="@style/poppin_bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{``+Math.round(model.totalRescuedItems)}"
                            android:textAlignment="center"
                            android:textColor="@color/reward_text_color"
                            android:textSize="@dimen/dimen_16sp" />


                        <TextView
                            style="@style/poppin_medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/items_rescued"
                            android:textAlignment="center"
                            android:textColor="@color/reward_text_color"
                            android:textSize="@dimen/dimen_10sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/tvSaved"
                            style="@style/poppin_bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{``+@string/price(``+Math.round(model.savedAmount))}"
                            android:textAlignment="center"
                            android:textColor="@color/reward_text_color"
                            android:textSize="@dimen/dimen_16sp" />


                        <TextView
                            style="@style/poppin_medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/saved"
                            android:textAlignment="center"
                            android:textColor="@color/reward_text_color"
                            android:textSize="@dimen/dimen_10sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/tvFoodRescued"
                            style="@style/poppin_bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{``+DoubleExtensionKt.roundOffDecimal(model.rescuseFoodFinal)+` KG`}"
                            android:textAlignment="center"
                            android:textColor="@color/reward_text_color"
                            android:textSize="@dimen/dimen_16sp" />


                        <TextView
                            style="@style/poppin_medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/food_rescued"
                            android:textAlignment="center"
                            android:textColor="@color/reward_text_color"
                            android:textSize="@dimen/dimen_10sp" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/drawable_top_round_corner"
                    android:orientation="vertical">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_14sdp"
                        android:layout_marginTop="@dimen/_25sdp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/tvPaymentInformation"
                            style="@style/poppin_regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:visibility="gone"
                            android:drawableStart="@drawable/fi_rr_credit_card"
                            android:drawablePadding="@dimen/_12sdp"
                            android:text="@string/payment_information"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen_14sp" />


                        <TextView
                            android:id="@+id/tvCreditWallet"
                            style="@style/poppin_regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:text="@string/credit_wallet"
                            android:drawableStart="@drawable/wallet"
                            android:drawablePadding="@dimen/_12sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen_14sp" />


                        <TextView
                            android:id="@+id/tvOrderDetail"
                            style="@style/poppin_regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:text="@string/order_details_amp_history"
                            android:drawableStart="@drawable/fi_rr_shopping_bag"
                            android:drawablePadding="@dimen/_12sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen_14sp" />


                        <TextView
                            android:id="@+id/tvHiddenLocation"
                            style="@style/poppin_regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:text="@string/hidden_location"
                            android:drawableStart="@drawable/unknown"
                            android:drawablePadding="@dimen/_12sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen_14sp" />


                        <TextView
                            android:id="@+id/tvHelp"
                            style="@style/poppin_regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:text="@string/help_amp_support"
                            android:drawableStart="@drawable/fi_rr_life_ring"
                            android:drawablePadding="@dimen/_12sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen_14sp" />


                        <TextView
                            android:id="@+id/tvAboutUs"
                            style="@style/poppin_regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:text="About Us"
                            android:drawableStart="@drawable/fi_rr_life_ring"
                            android:drawablePadding="@dimen/_12sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen_14sp" />


                        <TextView
                            android:id="@+id/tvTerm"
                            style="@style/poppin_regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:text="Terms &amp; Conditions"
                            android:drawableStart="@drawable/fi_rr_life_ring"
                            android:drawablePadding="@dimen/_12sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen_14sp" />


                        <TextView
                            android:id="@+id/tvPrivacy"
                            style="@style/poppin_regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:text="Privacy Policy"
                            android:drawableStart="@drawable/fi_rr_life_ring"
                            android:drawablePadding="@dimen/_12sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen_14sp" />


                        <TextView
                            android:id="@+id/tvRefund"
                            style="@style/poppin_regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:text="Refund &amp; Cancellation Policy"
                            android:drawableStart="@drawable/fi_rr_life_ring"
                            android:drawablePadding="@dimen/_12sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen_14sp" />


                        <TextView
                            android:id="@+id/tvLogout"
                            style="@style/poppin_regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:text="@string/log_out"
                            android:drawableStart="@drawable/fi_rr_sign_out"
                            android:drawablePadding="@dimen/_12sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen_14sp" />


                    </LinearLayout>

                    </ScrollView>

                </LinearLayout>
            </LinearLayout>







        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</layout>

